--- a/style.css
+++ b/style.css
@@ -1135,6 +1135,58 @@ footer {
     border: none;
     outline: none;
     background-color: var(--white);
+    cursor: auto;
+}
+
+.articles-filter-search form {
+    cursor: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.articles-filter-search:hover {
+    background-color: var(--white) !important;
+    border: 1px solid var(--black) !important;
+}
+
+.search-button {
+    width: 40px;
+    height: 24px;
+    border-radius: 48px;
+    background-color: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.search-button img {
+    width: 2.5rem;
+    height: 1.5rem;
+    object-fit: cover;
+    border-radius: 48px;
+}
+
+.search-field {
+    font-family: var(--subtitle);
+    font-size: 1rem;
+    color: var(--black);
+    width: 100%;
+}
+
+.search-field::placeholder {
+    font-family: var(--subtitle);
+    font-size: 1rem;
+    color: var(--black);
+}
+
+.search-field::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 1.25rem;
+    width: 1.25rem;
+    background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/regular/times.svg) no-repeat 50% 50%;
 }
 
 /*about page*/
